[gd_scene load_steps=5 format=3 uid="uid://drnbpouwoj8qu"]

[ext_resource type="Script" path="res://ui/building_ui.gd" id="1_q8cpe"]

[sub_resource type="LabelSettings" id="LabelSettings_udvu3"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_pb6ru"]
font_size = 32
font_color = Color(0.811765, 0.811765, 0.811765, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4ib5y"]
font_size = 30
font_color = Color(0.670588, 1, 1, 1)

[node name="building_ui" type="ColorRect"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -400.0
offset_right = 600.0
grow_vertical = 0
color = Color(0.152941, 0.152941, 0.152941, 1)
script = ExtResource("1_q8cpe")

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="content" type="VBoxContainer" parent="margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="name" type="Label" parent="margin/content"]
layout_mode = 2
text = "Building"
label_settings = SubResource("LabelSettings_udvu3")

[node name="description" type="Label" parent="margin/content"]
custom_minimum_size = Vector2(540, 0)
layout_mode = 2
size_flags_vertical = 3
text = "Building description"
label_settings = SubResource("LabelSettings_pb6ru")
autowrap_mode = 3

[node name="lower" type="HBoxContainer" parent="margin/content"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="upgrades" type="Label" parent="margin/content/lower"]
layout_mode = 2
text = "LV 2"
label_settings = SubResource("LabelSettings_4ib5y")

[node name="targeting" type="Button" parent="margin/content/lower"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_font_sizes/font_size = 40
text = "First"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="margin/content/lower/targeting" to="." method="_on_targeting_mouse_entered"]
[connection signal="pressed" from="margin/content/lower/targeting" to="." method="_on_targeting_pressed"]
